[package]
name = "file_update_monitor"
version = "0.1.0"
authors = ["licht.cui <lichtcui@gmail.com>"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Ensure your Chromedriver remains up-to-date alongside your Chrome browser"
homepage = "https://github.com/lichtcui/file_update_monitor"
repository = "https://github.com/lichtcui/file_update_monitor"
readme = "README.md"
keywords = ["file modify monitor", "file update monitor"]

[lib]
name = "file_update_monitor"
path = "src/lib.rs"

[dependencies]
debounce = "0.2.2"
futures = "0.3.31"
notify = "7.0.0"
