[package]
name = "file_update_monitor"
version = "0.1.2"
authors = ["licht.cui <lichtcui@gmail.com>"]
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "It watches a directory for file changes and triggers a callback when files are modified."
homepage = "https://github.com/lichtcui/file-update-monitor"
repository = "https://github.com/lichtcui/file-update-monitor"
readme = "README.md"
keywords = ["file", "monitor", "watch", "filesystem", "notify"]

[lib]
name = "file_update_monitor"
path = "src/lib.rs"

[dependencies]
debounce = "0.2.2"
futures = "0.3.31"
notify = "7.0.0"
